--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <head>
   <title>HowCrowded</title>
-  <link rel="import" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>HowCrowded</h1> 
+  <h1>HowCrowded</h1>
+  <nav id="navbar">
+    <a href="problem.html">Problem</a>
+    <a href="solution.html">Solution</a>
+    <a href="prototype.html">Prototype</a>
+  </nav>
+
 </body>
