--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>HowCrowded</h1>
-  <nav id="navbar">
-    <a href="problem.html">Problem</a>
-    <a href="solution.html">Solution</a>
-    <a href="prototype.html">Prototype</a>
-  </nav>
+  <div class="content">
+    <nav id="navbar">
+      <a href="#"><img src="images\howcrowded.PNG" /></a>
+      <a href="problem.html">Problem</a>
+      <a href="solution.html">Solution</a>
+      <a href="prototype.html">Prototype</a>
+    </nav>
+    <div class="main">
+      <p>Make social distancing easier
+      </p>
+    </div>
+  </div>
 
+
+  <footer id="footer">
+    <h2>Made by:</h2>
+    <div id="contributors">
+      <h5 id="moreFooter">Me</h6>
+      <h5 id="moreFooter">You</h6>
+      <h5 id="moreFooter">And You</h6>
+    </div>
+
+  </footer>
 </body>
