--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <body>
   <div class="content">
     <nav id="navbar">
-      <a href="#"><img src="images\howcrowded.PNG" /></a>
+      <a href="#"><img src="images\logo.PNG" /></a>
       <a href="problem.html">Problem</a>
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
     </nav>
     <div class="main">
+      <img class="images" src="images/distancing.jpg" alt="Social distancing">
       <p>Make social distancing easier
       </p>
     </div>
@@ -20,10 +21,10 @@
 
   <footer id="footer">
     <h2>Made by:</h2>
-    <div id="contributors">
-      <h5 id="moreFooter">Me</h6>
-      <h5 id="moreFooter">You</h6>
-      <h5 id="moreFooter">And You</h6>
+    <div id="moreFootercontributors">
+      <h5 id="contributor">Me</h6>
+      <h5 id="contributor">You</h6>
+      <h5 id="contributor">And You</h6>
     </div>
 
   </footer>
