Resources.html og navbar styling

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 
   <footer id="footer">
     <h2>Made by:</h2>
-    <div id="moreFootercontributors">
+    <br>
+    <div id="moreFooter">
       <h5 id="contributor">Me</h6>
       <h5 id="contributor">You</h6>
       <h5 id="contributor">And You</h6>
     </div>
-
+    <br>
+    <a id="resources" href="resources.html">Our resources</a>
+    <br><br>
   </footer>
 </body>
