resource test branch

--- a/prototype.html
+++ b/prototype.html
@@ -1,4 +1,31 @@
 <!DOCTYPE html>
 <head>
   <title>Prototype</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+<body>
+  <div class="content">
+    <nav id="navbar">
+      <a href="index.html"><img src="images\logo.PNG" /></a>
+      <a href="problem.html">Problem</a>
+      <a href="solution.html">Solution</a>
+      <a href="prototype.html">Prototype</a>
+    </nav>
+    <div class="main">
+    </div>
+  </div>
+
+
+  <footer id="footer">
+    <h2>Made by:</h2>
+    <br>
+    <div id="moreFooter">
+      <h5 id="contributor">Me</h6>
+      <h5 id="contributor">You</h6>
+      <h5 id="contributor">And You</h6>
+    </div>
+    <br>
+    <a id="resources" href="resources.html">Our resources</a>
+    <br><br>
+  </footer>
+</body>
