--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <head>
   <title>HowCrowded</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link id="style" rel="stylesheet" href="css/style.css">
+  <script type="text/javascript">
+    function changeCSS(){
+      if(document.getElementById("cssChange").checked == true){
+        document.getElementById("style").setAttribute('href', "css/style_alternative1.css");
+      }else{
+        document.getElementById("style").setAttribute('href', "css/style.css");
+      }
+    }
+  </script>
 </head>
 <body>
   <div class="content">
@@ -12,6 +21,7 @@
       <a href="prototype.html">Prototype</a>
     </nav>
     <div id="sources" class="main">
+      <h1>All resources:</h1>
       <h2>Sources of content:</h2>
       <li><a href="https://www.un.org/sustainabledevelopment/sustainable-development-goals/">UNs sustainable developement goals</a>- 05.11.2020</li>
       <li> <a href="https://www.un.org/sustainabledevelopment/health/">UNs goal nr. 3, Good health and well being</a>- 05.11.2020</li>
@@ -20,10 +30,15 @@
       <h2>Sources of assets:</h2>
       <li><a href="https://unsplash.com/photos/JqWanio3sZo">Distancing image on front page</a>- 11.11.2020</li>
     </div>
+    <input id="cssChange" type="checkbox" name="CSS" value="" onchange="changeCSS()">
   </div>
 
+<div class="">
+  test
+</div>
 
   <footer id="footer">
+
     <h2>Made by:</h2>
     <br>
     <div id="moreFooter">
