Delt inn css med kommentarer

--- a/resources.html
+++ b/resources.html
@@ -23,19 +23,19 @@
     <div id="sources" class="main">
       <h1>All resources:</h1>
       <h2>Sources of content:</h2>
-      <li><a href="https://www.un.org/sustainabledevelopment/sustainable-development-goals/">UNs sustainable developement goals</a>- 05.11.2020</li>
-      <li> <a href="https://www.un.org/sustainabledevelopment/health/">UNs goal nr. 3, Good health and well being</a>- 05.11.2020</li>
-      <li> <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public">WHO, Protect yourself and others from COVID-19</a>- 09.11.2020</li>
+      <ol>
+        <li id="UN-goals"><a href="https://www.un.org/sustainabledevelopment/sustainable-development-goals/">UNs sustainable developement goals</a>- 05.11.2020</li>
+        <li id="UN-3"> <a href="https://www.un.org/sustainabledevelopment/health/">UNs goal nr. 3, Good health and well being</a>- 05.11.2020</li>
+        <li id="WHO-COVID19"> <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public">WHO, Protect yourself and others from COVID-19</a>- 09.11.2020</li>
+      </ol>
       <br><br>
       <h2>Sources of assets:</h2>
-      <li><a href="https://unsplash.com/photos/JqWanio3sZo">Distancing image on front page</a>- 11.11.2020</li>
+      <ol>
+        <li><a href="https://unsplash.com/photos/JqWanio3sZo">Distancing image on front page</a>- 11.11.2020</li>
+      </ol>
     </div>
     <input id="cssChange" type="checkbox" name="CSS" value="" onchange="changeCSS()">
   </div>
-
-<div class="">
-  test
-</div>
 
   <footer id="footer">
 
