Forslag til footer

--- a/resources.html
+++ b/resources.html
@@ -38,14 +38,18 @@
   </div>
 
   <footer id="footer">
-
     <h2>Made by:</h2>
-    <br>
-    <div id="moreFooter">
-      <h5 id="contributor">Me</h6>
-      <h5 id="contributor">You</h6>
-      <h5 id="contributor">And You</h6>
+    <div class="fContent">
+      <a id="resources" href="resources.html">Our resources</a>
+      <p style="padding:1vh;">|</p>
+      <div id="contributors">
+        <h5 class="contributor">Ole</h5>
+        <h5 class="contributor">Zandra</h5>
+        <h5 class="contributor">Eva</h5>
+        <h5 class="contributor">Ina</h5>
+        <h5 class="contributor">Siem</h5>
+        <h5 class="contributor">Daniel</h5>
+      </div>
     </div>
-    <br>
   </footer>
 </body>
