problem og solution

--- a/solution.html
+++ b/solution.html
@@ -11,9 +11,64 @@
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
     </nav>
-    <div class="main">
 
-    </div>
+    <div class="solution-text">
+  <h2></h2>
+  <p>HowCrowded provides a dual solution to make it easier
+    both for people and organizations to keep social distance.<br><br>
+    This is achieved by:
+    <ul>
+      <li>Sensors provided to indoor locations accessible by
+        the public such as grocery stores, libraries or gyms.</li>
+      <li>An app/website that the public can use to check both
+        real time how many people are in an indoor location,
+        and also general trends so they can plan their visit when
+        there is less crowded.</li>
+      <li>An app/website that can be used by organizations
+        to manage information about how many people are in their
+        store at a given time. This can be used for planning and
+        organization as well as setting up a screen at the front door
+        to control the people going in and out.</li>
+      <li>This technology will make it much easier for people
+        to plan their visits to indoor public places and ensure that
+        they are going there when there is less people around.</li>
+      </ul>
+  <br><br>
+  </p>
+</div>
+
+ <div class="flex-so">
+ <div class="flex-leftso">
+   <img src="images/consumer.png" alt="consumer" width="auto" height="70">
+   <p class="solution-heading">Consumer</p>
+   <p class="solution-text-white"> This will make it much easier for people to plan their trips to public
+   indoor spaces as they can both check in real-time how many people and
+   see how many people that usually visit at given times.</p>
+   </div>
+
+   <div class="flex-rightso">
+     <img src="images/business.png" alt="organization" width="auto" height="70">
+     <p class="solution-heading"> Organization
+    </p>
+   <p class="solution-text-white"> For organizations, they no longer have to count manually how many
+    people are in the location, and for smaller stores this could mean
+    that they will no longer need to use a member of staff to control
+    the door as the customer is told by the screen when it is ready for
+    them to go into the space.</p>
+     </div>
+   </div>
+
+   <div class="solution-text">
+     <p>Privacy is also highly important for HowCrowded
+       and is why sensors are being used to control the
+       number of people going in and out without registering
+       which people. However for places such as restaurants
+       that are required to write who has visited can use the app
+       to register visitors too, but this will be saved on their
+       local hard drive and not distributed to the HowCrowded
+       database.</p>
+     </div>
+
   </div>
 
 
