Oppdateringer på hjemside

--- a/index.html
+++ b/index.html
@@ -12,11 +12,44 @@
       <a href="prototype.html">Prototype</a>
     </nav>
     <div class="main">
-      <img class="images" src="images/distancing.jpg" alt="Social distancing">
-      <p>Make social distancing easier
-      </p>
+      <img class="images" src="images/social_distancing.png" alt="Social distancing">
+      <div class="primary-heading">Makes social distancing easier
+      </div>
+
+      <div class="section-challenge">
+        <div class="section-container">
+          <div class="section-content"><br>
+            <h2>Challenge</h2><br>
+            <p>During the course of the Covid-19 pandemic, social distancing
+              has been key in helping to stop the spread of the virus.
+              Shopping malls, stores and gyms are often crowded with people at the same time.
+              This creates a challenge in maintaining safe social distancing.</p>
+              <br><br>
+            <a href="#" class="button">Read More</a>
+          </div>
+          <div class="section-image">
+            <img id="crowd-image" src="images/crowd.png" alt="Crowd">
+          </div>
+        </div>
+      </div>
+
+      <div class="section-solution">
+        <div class="section-container">
+          <div class="section-content"><br>
+            <h2>Solution</h2><br>
+            <p>Our app is designed to make social distancing easier.
+              HowCrowded shows you the optimal times to visit malls, stores
+              and places to maintain a safe distance from others to reduce the spread of COVID-19.</p>
+              <br><br>
+            <a href="#" class="button">Read More</a>
+          </div>
+          <div class="section-image">
+            <img id="app-image" src="images/iphonex_mockup.png" alt="The HowCrowded App">
+          </div>
+        </div>
+      </div>
+
     </div>
-  </div>
 
 
   <footer id="footer">
