--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="prototype.html">Prototype</a>
     </nav>
     <div class="main">
-      <img class="images" src="images/social_distancing.png" alt="Social distancing">
+      <img class="images" src="images/forsidebilde.png" alt="Social distancing">
       <div class="primary-heading">Makes social distancing easier
       </div>
 
