--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <title>HowCrowded</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="content">
@@ -12,7 +15,7 @@
       <a href="prototype.html">Prototype</a>
     </nav>
     <div class="main">
-      <img class="images" src="images/forsidebilde.png" alt="Social distancing">
+      <img class="images" src="images/forsidebilde.png" alt="Social distancing" height="auto" width="700">
       <div class="primary-heading">Makes social distancing easier
       </div>
 
@@ -65,3 +68,4 @@
     <br><br>
   </footer>
 </body>
+</html>
