--- a/solution.html
+++ b/solution.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <title>Solution</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="content">
@@ -85,3 +88,4 @@
     <br><br>
   </footer>
 </body>
+</html>
