--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <title>HowCrowded</title>
-  <link id="style" rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <link id="style" rel="stylesheet" type="text/css" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript">
     function changeCSS(){
       if(document.getElementById("cssChange").checked == true){
@@ -53,3 +56,4 @@
     </div>
   </footer>
 </body>
+</html>
