--- a/problem.html
+++ b/problem.html
@@ -40,6 +40,24 @@
       inside the room at the same time: be it a library, grocery
       store or a gym.</p><br>
 </div>
+<img class="center" src="images/unitednations.png" alt="" width="1000" height="auto">
+<div class="flex-pro">
+<div class="flex-leftpro">
+  <h2 class="problem-text">The challenge illustrated</h2>
+  <p class="problem-text">These days many stores and other public spaces have a display
+    of how many people are allowed into the store, occasionally
+    accompanied by member of staff that checks the numbers.
+    However, this is often only displayed by a simple note outside.
+    For example for bigger grocery stores where the number might be
+    up to 50 people it is difficult to see how many people are actually
+    in the store. This put both the customer and the organization’s
+    staff at risk of having too many people inside the same space
+    at the same time.</p>
+  </div>
+  <div class="flex-rightpro">
+    <img src="images/maximum.png" alt="" width="450" height="auto">
+  </div>
+</div>
     <div class="problem-text">
       <h2>Ensure healthy lives and promote well being for all
       at all ages</h2>
