--- a/solution.html
+++ b/solution.html
@@ -16,7 +16,7 @@
     </nav>
 
     <div class="solution-text">
-  <h2></h2>
+  <h2>A dual solution</h2>
   <p>HowCrowded provides a dual solution to make it easier
     both for people and organizations to keep social distance.<br><br>
     This is achieved by:
@@ -27,14 +27,11 @@
         real time how many people are in an indoor location,
         and also general trends so they can plan their visit when
         there is less crowded.</li>
-      <li>An app/website that can be used by organizations
+      <li>Technology that can be used by organizations
         to manage information about how many people are in their
         store at a given time. This can be used for planning and
         organization as well as setting up a screen at the front door
         to control the people going in and out.</li>
-      <li>This technology will make it much easier for people
-        to plan their visits to indoor public places and ensure that
-        they are going there when there is less people around.</li>
       </ul>
   <br><br>
   </p>
@@ -62,14 +59,19 @@
    </div>
 
    <div class="solution-text">
-     <p>Privacy is also highly important for HowCrowded
-       and is why sensors are being used to control the
-       number of people going in and out without registering
-       which people. However for places such as restaurants
-       that are required to write who has visited can use the app
-       to register visitors too, but this will be saved on their
-       local hard drive and not distributed to the HowCrowded
-       database.</p>
+     <h2>Differentiating us from our competitors</h2>
+     <p>There are similar concepts to the product we are offering.
+       Google for example has a function that shows how busy a place
+       is, and also does forecasts for different times of the day.
+       Furthermore, the technology for using sensors to track people
+       going in and out of a store also exicitis, however the practice
+       of using these are not widespread. However, the genius
+       lies in combining these two services. The stores will better
+       manage the flow of customers, because they give the real time
+       information to them, and the customers will get an accurate
+       number of how many people are in the store at a given time -
+       making it easier for them to plan when they are going to a
+       certain location.</p>
      </div>
 
   </div>
