--- a/solution.html
+++ b/solution.html
@@ -15,6 +15,15 @@
       <a href="prototype.html">Prototype</a>
     </nav>
 
+    <div class="topflex-sol">
+      <div class="topflex-solleft">
+        <img src="images/keepdistance.png" alt="" width="600" heigth="auto">
+      </div>
+      <div class="topflex-solright">
+        <p>Keep distance<br>to care<br>for each other</p>
+      </div>
+    </div>
+
     <div class="solution-text">
   <h2>A dual solution</h2>
   <p>HowCrowded provides a dual solution to make it easier
