--- a/problem.html
+++ b/problem.html
@@ -15,10 +15,11 @@
       <a href="prototype.html">Prototype</a>
     </nav>
 
-    <div class="problem-text">
-  <h2>The challenge of a global pandemic</h2>
-  <img src="images/distance.png" alt="" width="500" height="auto" class="text-wrap-right">
-    <p> HowCrowded is working towards handling one
+    <div class="flex-challenge">
+      <div class="flex-challenge-left">
+  <h2 class="problem-text">The challenge of a global pandemic</h2>
+
+    <p class="problem-text"> HowCrowded is working towards handling one
       of the challenges that comes with the COVID-19
       pandemic:<br>
       <i>- Managing to keep distance to other people in
@@ -40,22 +41,26 @@
       inside the room at the same time: be it a library, grocery
       store or a gym.</p><br>
 </div>
-<img class="center" src="images/unitednations.png" alt="" width="1000" height="auto">
+<div class="flex-challenge-right">
+<img src="images/distance.png" alt="" width="500" height="auto">
+</div>
+</div>
+
 <div class="flex-pro">
-<div class="flex-leftpro">
-  <h2 class="problem-text">The challenge illustrated</h2>
-  <p class="problem-text">These days many stores and other public spaces have a display
-    of how many people are allowed into the store, occasionally
-    accompanied by member of staff that checks the numbers.
-    However, this is often only displayed by a simple note outside.
-    For example for bigger grocery stores where the number might be
-    up to 50 people it is difficult to see how many people are actually
-    in the store. This put both the customer and the organization’s
-    staff at risk of having too many people inside the same space
-    at the same time.</p>
+ <div class="flex-leftpro">
+ <img src="images/maximum.png" alt="" width="470" height="auto">
   </div>
   <div class="flex-rightpro">
-    <img src="images/maximum.png" alt="" width="450" height="auto">
+    <h2 class="problem-text">The challenge illustrated</h2>
+    <p class="problem-text">These days many stores and other public spaces have a display
+      of how many people are allowed into the store, occasionally
+      accompanied by member of staff that checks the numbers.
+      However, this is often only displayed by a simple note outside.
+      For example for bigger grocery stores where the number might be
+      up to 50 people it is difficult to see how many people are actually
+      in the store. This put both the customer and the organization’s
+      staff at risk of having too many people inside the same space
+      at the same time.</p>
   </div>
 </div>
     <div class="problem-text">
@@ -74,6 +79,7 @@
       The UN(n.d.) calls out for comprehensive health strategies and increased
       spending on health systems.</p>
     </div>
+    <img class="center" src="images/unitednations.png" alt="" width="1000" height="auto">
   </div>
 
 
