--- a/resources.html
+++ b/resources.html
@@ -34,7 +34,7 @@
         <li><a href="https://unsplash.com/photos/JqWanio3sZo">Distancing image on front page</a>- 11.11.2020</li>
       </ol>
     </div>
-    <input id="cssChange" type="checkbox" name="CSS" value="" onchange="changeCSS()">
+    <!--<input id="cssChange" type="checkbox" name="CSS" value="" onchange="changeCSS()">-->
   </div>
 
   <footer id="footer">
