--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@
     }
   </script>
 </head>
-<body>
+<body id="resource">
   <div class="content">
     <nav id="navbar">
       <a href="index.html"><img src="images\logo.PNG" /></a>
