index ser bra ut på stor skjerm

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
       <a href="prototype.html">Prototype</a>
     </nav>
     <div class="main">
-      <img class="images" src="images/forsidebilde.png" alt="Social distancing" height="auto" width="700">
-      <div class="primary-heading">Makes social distancing easier
+      <div class="intro">
+        <img id="distancing" class="images" src="images/forsidebilde.png" alt="Social distancing" height="auto" width="700">
+        <div class="primary-heading">
+          <h1>Makes social distancing easier</h1>
+        </div>
       </div>
-
       <div class="section-challenge">
         <div class="section-container">
           <div class="section-content"><br>
@@ -35,7 +37,6 @@
           </div>
         </div>
       </div>
-
       <div class="section-solution">
         <div class="section-container">
           <div class="section-content"><br>
@@ -51,21 +52,22 @@
           </div>
         </div>
       </div>
-
     </div>
-
-
+  </div>
   <footer id="footer">
     <h2>Made by:</h2>
-    <br>
-    <div id="moreFooter">
-      <h5 id="contributor">Me</h6>
-      <h5 id="contributor">You</h6>
-      <h5 id="contributor">And You</h6>
+    <div class="fContent">
+      <a id="resources" href="resources.html">Our resources</a>
+      <p style="padding:1vh;">|</p>
+      <div id="contributors">
+        <h5 class="contributor">Ole</h5>
+        <h5 class="contributor">Zandra</h5>
+        <h5 class="contributor">Eva</h5>
+        <h5 class="contributor">Ina</h5>
+        <h5 class="contributor">Siem</h5>
+        <h5 class="contributor">Daniel</h5>
+      </div>
     </div>
-    <br>
-    <a id="resources" href="resources.html">Our resources</a>
-    <br><br>
   </footer>
 </body>
 </html>
