endra noen filnavn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="content">
     <nav id="navbar">
-      <a href="#"><img src="images\HowCrowded.PNG" /></a>
+      <a href="index.html"><img src="images\logo.PNG" /></a>
       <a href="problem.html">Problem</a>
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
@@ -58,7 +58,7 @@
     <h2>Made by:</h2>
     <div class="fContent">
       <a id="resources" href="resources.html">Our resources</a>
-      <p style="padding:1vh;">|</p>
+      <img src="images/HCicon.png"/>
       <div id="contributors">
         <h5 class="contributor">Ole</h5>
         <h5 class="contributor">Zandra</h5>
