--- a/prototype.html
+++ b/prototype.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Prototype</title>
+  <title>HowCrowded</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,19 +17,20 @@
     <div class="main">
     </div>
   </div>
-
-
   <footer id="footer">
     <h2>Made by:</h2>
-    <br>
-    <div id="moreFooter">
-      <h5 id="contributor">Me</h6>
-      <h5 id="contributor">You</h6>
-      <h5 id="contributor">And You</h6>
+    <div class="fContent">
+      <a id="resources" href="resources.html">Our resources</a>
+      <img src="images/HCicon.png"/>
+      <div id="contributors">
+        <h5 class="contributor">Ole</h5>
+        <h5 class="contributor">Zandra</h5>
+        <h5 class="contributor">Eva</h5>
+        <h5 class="contributor">Ina</h5>
+        <h5 class="contributor">Siem</h5>
+        <h5 class="contributor">Daniel</h5>
+      </div>
     </div>
-    <br>
-    <a id="resources" href="resources.html">Our resources</a>
-    <br><br>
   </footer>
 </body>
 </html>
