--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main">
       <img class="images" src="images/forsidebilde.png" alt="Social distancing" height="auto" width="700">
       <div class="primary-heading">Makes social distancing easier
-      </div>
+      </div><br><br>
 
       <div class="section-challenge">
         <div class="section-container">
@@ -28,7 +28,7 @@
               Shopping malls, stores and gyms are often crowded with people at the same time.
               This creates a challenge in maintaining safe social distancing.</p>
               <br><br>
-            <a href="#" class="button">Read More</a>
+            <a href="problem.html" class="button">Read More</a>
           </div>
           <div class="section-image">
             <img id="crowd-image" src="images/crowd.png" alt="Crowd">
@@ -44,7 +44,7 @@
               HowCrowded shows you the optimal times to visit malls, stores
               and places to maintain a safe distance from others to reduce the spread of COVID-19.</p>
               <br><br>
-            <a href="#" class="button">Read More</a>
+            <a href="solution.html" class="button">Read More</a>
           </div>
           <div class="section-image">
             <img id="app-image" src="images/iphonex_mockup.png" alt="The HowCrowded App">
