--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
           <h1>Makes social distancing easier</h1>
         </div>
       </div>
-      <div class="section-challenge">
+      <a href="#section-challenge"><img id="" class="arrow-down" src="images/arrow-down.svg" alt="Scroll Down"></a>
+      <div id="section-challenge" class="section-challenge">
         <div class="section-container">
           <div class="section-content"><br>
             <h2>Challenge</h2><br>
@@ -30,7 +31,7 @@
               Shopping malls, stores and gyms are often crowded with people at the same time.
               This creates a challenge in maintaining safe social distancing.</p>
               <br><br>
-              <a href="#" class="button">Read More</a>
+              <a href="problem.html" class="button">Read More</a>
             </div>
             <div class="section-image">
               <img id="crowd-image" src="images/crowd.png" alt="Crowd">
@@ -45,7 +46,7 @@
                 HowCrowded shows you the optimal times to visit malls, stores
                 and places to maintain a safe distance from others to reduce the spread of COVID-19.</p>
                 <br><br>
-                <a href="#" class="button">Read More</a>
+                <a href="solution.html" class="button">Read More</a>
               </div>
               <div class="section-image">
                 <img id="app-image" src="images/iphonex_mockup.png" alt="The HowCrowded App">
