endret litt på teksten, fått vekk skrivefeil og omformulert litt, mulig jeg endrer mer senere

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <div class="section-content"><br>
             <h2>Challenge</h2><br>
             <p>During the course of the Covid-19 pandemic, social distancing
-              has been key in helping to stop the spread of the virus.
-              Shopping malls, stores and gyms are often crowded with people at the same time.
-              This creates a challenge in maintaining safe social distancing.</p>
+              has been key in preventing spread of the virus.
+              Shopping malls, stores and gyms are often crowded,
+              creating a challenge when trying to maintain safe social distancing.</p>
               <br><br>
               <a href="problem.html" class="button">Read More</a>
             </div>
@@ -44,7 +44,7 @@
               <h2>Solution</h2><br>
               <p>Our app is designed to make social distancing easier.
                 HowCrowded shows you the optimal times to visit malls, stores
-                and places to maintain a safe distance from others to reduce the spread of COVID-19.</p>
+                and other places to keep a safe distance to others, in order to reduce the spread of COVID-19.</p>
                 <br><br>
                 <a href="solution.html" class="button">Read More</a>
               </div>
