--- a/problem.html
+++ b/problem.html
@@ -22,23 +22,22 @@
           <p class="problem-text"> HowCrowded is working towards handling one
             of the challenges that comes with the COVID-19
             pandemic:<br>
-            <i>- Managing to keep distance to other people in
-              order to prevent the disease to spread.</i><br>
+            <i>- Managing to keep distance to other people, in
+              order to prevent the virus to spread.</i><br>
               Today’s global pandemic has taught us many things.
-              It’s made us more aware to wash our hands and perhaps
-              most importantly to keep distance from each other.
+              For instance, it's made us more aware to wash our hands, and perhaps
+              most importantly, it's learned us the importance of practicing social distancing.
               WHO (n.d.) states that to keep yourself and others
-              safe from COVID-19 it’s important to keep a distance
+              safe from COVID-19, it’s important to keep a distance
               of at least one meter from others, and an even greater
-              distance when one is indoors. The further away, the better.
-              However, it is not always easy to be able to maintain
-              distance to other people. Doing necessary chores such
-              as going to a grocery store can make it difficult to keep
-              distance to the other shoppers if there are too many people
-              there at the same time. This is also a big challenge for
+              distance indoors; the further away, the better.
+              However, in some situations, it's hard maintaining
+              distance to other people. Doing necessary chores, such
+              as going to the grocery store, can make it difficult to keep
+              distance to the other shoppers if the store is crowded. This is also a big challenge for
               indoor spaces that are open to the public. They need
-              regulation to ensure that there are not too many people
-              inside the room at the same time: be it a library, grocery
+              regulations to ensure that there are not too many people
+              inside the area at the same time: be it a library, grocery
               store or a gym.</p><br>
             </div>
             <div class="flex-challenge-right">
