--- a/solution.html
+++ b/solution.html
@@ -27,20 +27,20 @@
       <div class="solution-text">
         <h2>A dual solution</h2>
         <p>HowCrowded provides a dual solution to make it easier
-          both for people and organizations to keep social distance.<br><br>
+          for both people and organizations to practice social distancing.<br><br>
           This is achieved by:
           <ul>
-            <li>Sensors provided to indoor locations accessible by
-              the public such as grocery stores, libraries or gyms.</li>
-              <li>An app/website that the public can use to check both
-                real time how many people are in an indoor location,
-                and also general trends so they can plan their visit when
-                there is less crowded.</li>
-                <li>Technology that can be used by organizations
-                  to manage information about how many people are in their
-                  store at a given time. This can be used for planning and
-                  organization as well as setting up a screen at the front door
-                  to control the people going in and out.</li>
+            <li>Sensors provided for indoor locations accessible by
+              the public, such as grocery stores, libraries or gyms.</li>
+              <li>An app/website where the public can check
+                in real time how many people there are in an indoor location at a given time,
+                including general trends, so they can plan their visit
+                based on how crowded it is at specific times.</li>
+                <li>Technology that can be used by organizations and businesses
+                  to manage information about how many people there are in their
+                  area at a given time. This can be used by the business for planning,
+                  as well as using the technology at the front door monitoring the number of people inside,
+                  preventing the area from becoming crowded.</li>
                 </ul>
                 <br><br>
               </p>
@@ -51,36 +51,32 @@
                 <img src="images/consumer.png" alt="consumer" width="auto" height="70">
                 <p class="solution-heading">Consumer</p>
                 <p class="solution-text-white"> This will make it much easier for people to plan their trips to public
-                  indoor spaces as they can both check in real-time how many people and
-                  see how many people that usually visit at given times.</p>
+                  indoor spaces as they can both check in real-time how many people there are and
+                  see how many people usually visit at given times.</p>
                 </div>
 
                 <div class="flex-rightso">
                   <img src="images/business.png" alt="organization" width="auto" height="70">
                   <p class="solution-heading"> Organization
                   </p>
-                  <p class="solution-text-white"> For organizations, they no longer have to count manually how many
-                    people are in the location, and for smaller stores this could mean
-                    that they will no longer need to use a member of staff to control
-                    the door as the customer is told by the screen when it is ready for
-                    them to go into the space.</p>
+                  <p class="solution-text-white"> For organizations and businesses, they no longer have to manually count
+                      how many people there are inside the location at all times. For many businesses this will mean
+                    that they no longer have to use staff monitoring by the door, as the customer is told by the screen when
+                    it's room enough for them to go inside. </p>
                   </div>
                 </div>
 
                 <div class="solution-text">
-                  <h2>Differentiating us from our competitors</h2>
-                  <p>There are similar concepts to the product we are offering.
-                    Google for example has a function that shows how busy a place
-                    is, and also does forecasts for different times of the day.
-                    Furthermore, the technology for using sensors to track people
-                    going in and out of a store also exicitis, however the practice
-                    of using these are not widespread. However, the genius
-                    lies in combining these two services. The stores will better
-                    manage the flow of customers, because they give the real time
-                    information to them, and the customers will get an accurate
-                    number of how many people are in the store at a given time -
-                    making it easier for them to plan when they are going to a
-                    certain location.</p>
+                  <h2>Differentiating us from competitors</h2>
+                  <p>There are concepts similar to our service.
+                    Google, for instance has a function which shows how busy a place
+                    is, and also shows predictions for different times of the day.
+                    Using sensors to track people going in and out of a building
+                    is also a technology that already exists, though it's not used much.
+                    However, the idea behind our service, is combining these two technologies.
+                    The stores will become better at managing the flow of customers, and the customers will get an accurate
+                    number of how many people there are in the store at a given time -
+                    making it easier for them to plan when to safely go to the store.</p>
                   </div>
                 </div>
               </div>
