La prototype bile på forsiden, kommenterte bort box-shadodw

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="solution.html" class="button">Read More</a>
               </div>
               <div class="section-image">
-                <img id="app-image" src="images/iphonex_mockup.png" alt="The HowCrowded App">
+                <img id="app-image" src="images/prototype/Home_page.png" alt="The HowCrowded App">
               </div>
             </div>
           </div>
