--- a/prototype.html
+++ b/prototype.html
@@ -73,7 +73,7 @@
             <img src="images/prototype/5More.png">
         </div>
     </section>
-    <section class="prototype wrapper_dark">
+    <section class="prototype wrapper_dark darkDiv">
         <div class="app_img wrapper_left">
             <img src="images/prototype/Green.png">
         </div>
